...
  "adminNoMember": "No member",
  "adminNoMembership": "No membership",
  "adminNoMoreLoaner": "No lender available",
  "adminNoSchool": "No school",
  "adminNotificationSent": "Notification sent",
  "adminNotifyGroup": "Send a notification",
  "adminPaiement": "Payment",
  "adminPaiementModule": "Payment module",
  "adminRemoveGroupMember": "Remove member from group?",
  "adminResearch": "Search",
  "adminSchools": "Schools",
  "adminAccountTypesDescription": "Change the account type of a user",
  "adminAccountTypeSearchUser": "Search a user",
...
  "bookingBy": "by",
  "bookingConfirm": "Confirm",
  "bookingConfirmation": "Confirmation",
  "bookingConfirmBooking": "Confirm the booking?",
  "bookingConfirmed": "Confirmed",
  "bookingDates": "Dates",
  "bookingDecline": "Decline",
  "bookingDeclineBooking": "Decline the booking?",
  "bookingDeclined": "Declined",
  "bookingDelete": "Delete",
  "bookingDeleteBooking": "Deleting",
  "bookingDeleteBookingConfirmation": "Are you sure you want to delete this booking?",
  "bookingDeletedBooking": "Booking deleted",
...
  "paiementAddingSellerError": "Error while adding seller",
  "paiementAddingStoreError": "Error while adding the store",
  "paiementAddSeller": "Add seller",
  "paiementAddStore": "Add store",
  "paiementAddThisDevice": "Add this device",
  "paiementAdmin": "Administrator",
  "paiementAmount": "Amount",
  "paiementAskDeviceActivation": "Device activation request",
  "paiementAStore": "a store",
  "paiementAt": "at",
  "paiementAuthenticationRequired": "Authentication required to pay",
  "paiementAuthentificationFailed": "Authentication failed",
  "paiementBalanceAfterTopUp": "Balance after top-up:",
  "paiementBalanceAfterTransaction": "Balance after payment: ",
  "paiementBank": "Collect",
  "paiementBillingSpace": "Billing page",
  "paiementCameraPermissionRequired": "Camera permission required",
  "paiementCameraPerssionRequiredDescription": "To scan a QR Code, you must allow camera access.",
  "paiementCanBank": "Can collect payments",
  "paiementCanCancelTransaction": "Can cancel transactions",
  "paiementCanManageEvents": "Can manage ticket events",
  "paiementCanManageSellers": "Can manage sellers",
  "paiementCanSeeHistory": "Can view history",
  "paiementCantLaunchURL": "Can't open link",
  "paiementClose": "Close",
  "paiementCompletePayment": "Complete payment",
  "paiementConfirmPayment": "Confirm Payment",
  "paiementConfirmYourPurchase": "Confirm your purchase",
  "paiementCreate": "Create",
  "paiementCreateInvoice": "Create new invoice",
  "paiementDecline": "Decline",
...
  "paiementDeleteStore": "Delete store",
  "paiementDeleteStoreDescription": "Are you sure you want to delete this store?",
  "paiementDeleteStoreError": "Unable to delete the store",
  "paiementDeleteSuccessfully": "Successfully deleted",
  "paiementDeletingSellerError": "Error while deleting seller",
  "paiementDeviceActivationReceived": "The activation request has been received, please check your email to finalize the process",
  "paiementDeviceNotActivated": "Device not activated",
  "paiementDeviceNotActivatedDescription": "Your device is not yet activated. \nTo activate it, please go to the devices page.",
  "paiementDeviceNotRegistered": "Device not registered",
  "paiementDeviceNotRegisteredDescription": "Your device is not registered yet. \nTo register it, please go to the devices page.",
  "paiementDeviceRecoveryError": "Error while retrieving device",
  "paiementDeviceRevoked": "Device revoked",
  "paiementDeviceRevokingError": "Error while revoking device",
  "paiementDevices": "Devices",
  "paiementDoneTransaction": "Transaction completed",
  "paiementDownload": "Download",
  "paiementEditStore": "Edit store {store}",
  "@paiementEditStore": {
...
  "paiementMarkUnpaid": "Mark as unpaid",
  "paiementMaxAmount": "The maximum wallet amount is",
  "paiementMean": "Average: ",
  "paiementModify": "Edit",
  "paiementModifyingStoreError": "Error while updating the store",
  "paiementModifySuccessfully": "Successfully modified",
  "paiementNewCGU": "New Terms of Service",
  "paiementNext": "Next",
  "paiementNextAccountable": "Next responsible",
  "paiementNoAssociation": "No association",
  "paiementNoInvoiceToCreate": "No invoice to create",
  "paiementNoMembership": "No membership",
  "paiementNoMembershipDescription": "This product is not available to non-members. Confirm the payment?",
  "paiementNoRequests": "No payment requests",
  "paiementNoThanks": "No thanks",
  "paiementNoTransaction": "No transaction",
  "paiementNoTransactionForThisMonth": "No transactions for this month",
  "paiementOf": "of",
  "paiementPaid": "Paid",
  "paiementPay": "Pay",
  "paiementPayment": "Payment",
  "paiementPaymentCanceled": "Payment canceled",
  "paiementPaymentRequest": "Payment request",
  "paiementPaymentRequestAccepted": "Payment request accepted",
  "paiementPaymentRequestError": "Error processing payment request",
  "paiementPaymentRequestRefused": "Payment request refused",
  "paiementPaymentSuccessful": "Payment successful!",
  "paiementPayWithHA": "Pay with HelloAsso",
  "ticketsHelloAssoPersonalLinkWarning": "The payment link is personal and must not be shared.",
  "paiementPending": "Pending",
  "paiementPersonalBalance": "Personal balance",
  "paiementPleaseAcceptPopup": "Please allow popups",
  "paiementPleaseAcceptTOS": "Please accept the Terms of Service.",
  "paiementPleaseAddDevice": "Please add this device to pay",
  "paiementPleaseAuthenticate": "Please authenticate",
  "paiementPleaseEnterMinAmount": "Please enter an amount greater than 1",
  "paiementPleaseEnterValidAmount": "Please enter a valid amount",
  "paiementProceedSuccessfully": "Payment completed successfully",
  "paiementQRCodeAlreadyUsed": "QR Code already used",
  "paiementReactivateRevokedDeviceDescription": "Your device has been revoked. \nTo reactivate it, please go to the devices page.",
  "paiementReceived": "Received",
  "paiementRefund": "Refund",
  "paiementRefundAction": "Refund",
...
  "paiementTransactionCancelledError": "Error while cancelling the transaction",
  "paiementTransferStructure": "Structure transfer",
  "paiementTransferStructureDescription": "The new manager will have access to all structure management features. You will receive an email to confirm this transfer. The link will only be active for 20 minutes. This action is irreversible. Are you sure you want to continue?",
  "paiementTransferStructureError": "Error while transferring structure",
  "paiementTransferStructureSuccess": "Structure transfer requested successfully",
  "paiementUnknownDevice": "Unknown device",
  "paiementValidUntil": "Valid until",
  "paiementYouAreTransferingStructureTo": "You are about to transfer the structure to ",
  "paiementYourBalance": "Your balance",
  "phAdd": "Add",
  "phAdded": "Added",
  "phAddingFileError": "Add error",
  "phAddNewJournal": "Add a new journal",
...
